--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="about-top">
 				<h3>La Vecindad Sincelejo</h3>
 				<p>Nosotros somos un lugar donde vedemos comidas rápidas..</p>
-				<center><img src="images/vecindad.jpg" alt=""></center>
+				<center><img src="images/vecindad.jpg" class="img-responsive" alt=""></center>
 				
 			</div>
 			<div class="about-bottom">
@@ -71,7 +71,7 @@
 					<p> La vecindad Sincelejo, somos un negocio de comidas rápidas, que se inauguró el día 04 de marzo del año 2018, nos destacamos en la parte de comidas rápidas como lo son, los perros, las salchipapas, desgranados, picadas, asados, hamburguesas etc. Estamos ubicados en la principal del barrio pioneros de Sincelejo, subiendo la cancha de futbol, a lo largo de todo este periodo que hemos estado funcionando hemos conseguido alcanzar metas y propósitos. Nuestro equipo de trabajo está conformado por 5 personas, los cuales son, los cocineros, la mesera, el domiciliario y el administrador, nuestra instalación es amplia y constamos con 9 mesas, aire acondicionado y sobre todo buen ambiente. Siempre nos preocupamos por tener el mejor servicio posible, y que nuestro cliente quede satisfecho, así mismo las cosas se hacen con total responsabilidad. Nuestro equipo de trabajo son personas aptas para el trabajo, para poder brindarle al cliente la mejor experiencia.  </p>
 				</div>
 				<div class="col-md-4 about-bottom-right">
-					<img src="images/vecindad1.jpg" alt=""/>
+					<img src="images/vecindad1.jpg" class="img-responsive" alt=""/>
 				</div>
 			  <div class="clearfix"> </div>
 			</div>
